# floral-notepaper

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: desktop.rs  lib.rs  main.rs
src-tauri/src/services/: notes.rs
src/components/: MainWindow.test.tsx  MainWindow.tsx  NotePad.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  Tile.test.tsx  Tile.tsx
src/features/importExport/: api.test.ts  api.ts
src/features/markdown/: MarkdownPreview.tsx
src/features/notes/: api.ts  noteContextMenu.test.ts  noteContextMenu.ts  noteUtils.test.ts  noteUtils.ts  types.ts
src/features/settings/: api.test.ts  api.ts  shortcutRecorder.ts  theme.ts  types.ts
src/features/windows/: surfaceActions.ts  surfaceMode.test.ts  surfaceMode.ts  windowRoutes.test.ts
