[package]
name = "shijie"
version = "1.0.2"
description = "拾芥 - 轻量跨平台桌面便签应用"
authors = ["Achilng"]
edition = "2021"

[lib]
name = "shijie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
regex = "1"
fontdb = "0.23"
tempfile = "3"
dirs = "6"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
core-foundation = "0.10"
core-graphics = "0.24"
objc = "0.2"
